--- a/src/index.html
+++ b/src/index.html
@@ -26,6 +26,7 @@
 	<script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
+  <script type='text/javascript' src='//pl24223346.cpmrevenuegate.com/e2/d8/d2/e2d8d22bb64392d227d2bfa586c291bc.js'></script>
   <app-root></app-root>
  
   <script src="assets/js/vendor/jquery-library.js"></script>
