--- a/src/index.html
+++ b/src/index.html
@@ -5,6 +5,8 @@
   <title>kora leb</title>
   <base href="/">
   <meta name="description" content="Catch the latest football live matches, including Premier League,La Liga, Ligue 1 , Serie A , Bondesliga,  Champions League, and Europa League. Get live streaming, scores, and news.">
+  <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
+
   <link rel="icon" type="image/png" href="assets/images/logo.png">
   <meta name="robots" content="index, follow">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
