--- a/src/index.html
+++ b/src/index.html
@@ -6,6 +6,7 @@
   <base href="/">
   <meta name="description" content="Catch the latest football live matches, including Premier League,La Liga, Ligue 1 , Serie A , Bondesliga,  Champions League, and Europa League. Get live streaming, scores, and news.">
   <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
+<meta name="description" content="Kooora Lives offers live streaming for the most popular sports worldwide, including football, basketball, baseball, tennis, and much more. Watch your favorite sports events live!">
 
   <link rel="icon" type="image/png" href="assets/images/logo.png">
   <meta name="robots" content="index, follow">
