--- a/src/index.html
+++ b/src/index.html
@@ -7,6 +7,16 @@
   <meta name="description" content="Catch the latest football live matches, including Premier League,La Liga, Ligue 1 , Serie A , Bondesliga,  Champions League, and Europa League. Get live streaming, scores, and news.">
   <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
 <meta name="description" content="Kooora Lives offers live streaming for the most popular sports worldwide, including football, basketball, baseball, tennis, and much more. Watch your favorite sports events live!">
+<script type="application/ld+json">
+{
+  "@context": "https://schema.org",
+  "@type": "WebSite",
+  "name": "Kooora Lives",
+  "url": "https://www.koraleb.com",
+  "description": "Kooora Lives offers live streaming of popular sports including football, basketball, baseball, tennis, and more.",
+  
+}
+</script>
 
   <link rel="icon" type="image/png" href="assets/images/logo.png">
   <meta name="robots" content="index, follow">
@@ -29,6 +39,8 @@
 	<script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
+
+
   <script type='text/javascript' src='//pl24223346.cpmrevenuegate.com/e2/d8/d2/e2d8d22bb64392d227d2bfa586c291bc.js'></script>
   <app-root></app-root>
  
