--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>kora leb</title>
+  <title>Kooora Lives - Watch Live Streaming of Football, Basketball, Baseball, Tennis & More</title>
+
   <base href="/">
   <meta name="description" content="Catch the latest football live matches, including Premier League,La Liga, Ligue 1 , Serie A , Bondesliga,  Champions League, and Europa League. Get live streaming, scores, and news.">
   <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
