--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,8 @@
 	<script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
 </head>
 <body>
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-7493987856365165"
+     crossorigin="anonymous"></script>
 
 <script type="text/javascript">
 	atOptions = {
