--- a/src/index.html
+++ b/src/index.html
@@ -5,90 +5,86 @@
   <title>Koora Live LB - Watch Live Streaming of Football, Basketball, Baseball, Tennis & More</title>
 
   <base href="/">
-  <meta name="description" content="Catch the latest football live matches, including Premier League,La Liga, Ligue 1 , Serie A , Bondesliga,  Champions League, and Europa League. Get live streaming, scores, and news.">
+  <meta name="description" content="Kooora Lives offers live streaming for the most popular sports worldwide, including football, basketball, baseball, tennis, and much more. Watch your favorite sports events live!">
   <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
-<meta name="description" content="Kooora Lives offers live streaming for the most popular sports worldwide, including football, basketball, baseball, tennis, and much more. Watch your favorite sports events live!">
-<script type="application/ld+json">
-{
-  "@context": "https://schema.org",
-  "@type": "WebSite",
-  "name": "Kooora Lives",
-  "url": "https://www.koraleb.com",
-  "description": "Kooora Lives offers live streaming of popular sports including football, basketball, baseball, tennis, and more.",
   
-}
-</script>
-
-<script type="text/javascript" src="//www.topcreativeformat.com/2fc087847a389f44d27070155ab00dc8/invoke.js"></script>
-
   <link rel="icon" type="image/png" href="assets/images/logo.png">
   <meta name="robots" content="index, follow">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
-	<link rel="stylesheet" href="assets/css/bootstrap.min.css">
-	<link rel="stylesheet" href="assets/css/normalize.css">
-	<link rel="stylesheet" href="assets/css/font-awesome.min.css">
-	<link rel="stylesheet" href="assets/css/transitions.css">
-	<link rel="stylesheet" href="assets/css/prettyPhoto.css">
-	<link rel="stylesheet" href="assets/css/swiper.min.css">
-	<link rel="stylesheet" href="assets/css/jquery-ui.css">
-	<link rel="stylesheet" href="assets/css/animate.css">
-	<link rel="stylesheet" href="assets/css/owl.theme.css">
-	<link rel="stylesheet" href="assets/css/owl.carousel.css">
-	<link rel="stylesheet" href="assets/css/customScrollbar.css">
-	<link rel="stylesheet" href="assets/css/icomoon.css">
-	<link rel="stylesheet" href="assets/css/main.css">
-	<link rel="stylesheet" href="assets/css/color.css">
-	<link rel="stylesheet" href="assets/css/responsive.css">
-	<script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js"></script>
-
+  <link rel="stylesheet" href="assets/css/bootstrap.min.css">
+  <link rel="stylesheet" href="assets/css/normalize.css">
+  <link rel="stylesheet" href="assets/css/font-awesome.min.css">
+  <link rel="stylesheet" href="assets/css/transitions.css">
+  <link rel="stylesheet" href="assets/css/prettyPhoto.css">
+  <link rel="stylesheet" href="assets/css/swiper.min.css">
+  <link rel="stylesheet" href="assets/css/jquery-ui.css">
+  <link rel="stylesheet" href="assets/css/animate.css">
+  <link rel="stylesheet" href="assets/css/owl.theme.css">
+  <link rel="stylesheet" href="assets/css/owl.carousel.css">
+  <link rel="stylesheet" href="assets/css/customScrollbar.css">
+  <link rel="stylesheet" href="assets/css/icomoon.css">
+  <link rel="stylesheet" href="assets/css/main.css">
+  <link rel="stylesheet" href="assets/css/color.css">
+  <link rel="stylesheet" href="assets/css/responsive.css">
+  
+  <script type="application/ld+json">
+  {
+    "@context": "https://schema.org",
+    "@type": "WebSite",
+    "name": "Kooora Lives",
+    "url": "https://www.koraleb.com",
+    "description": "Kooora Lives offers live streaming of popular sports including football, basketball, baseball, tennis, and more."
+  }
+  </script>
+  <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" defer></script>
 </head>
 <body>
   
-
-<script type="text/javascript">
-	atOptions = {
-		'key' : '2fc087847a389f44d27070155ab00dc8',
-		'format' : 'iframe',
-		'height' : 90,
-		'width' : 728,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/2fc087847a389f44d27070155ab00dc8/invoke.js"></script>
-  <script type='text/javascript' src='//pl24223346.cpmrevenuegate.com/e2/d8/d2/e2d8d22bb64392d227d2bfa586c291bc.js'></script>
-  <app-root></app-root>
- 
-  <script src="assets/js/vendor/jquery-library.js"></script>
-	<script src="assets/js/vendor/bootstrap.min.js"></script>
-	<script src="assets/js/customScrollbar.min.js"></script>
-	<script src="assets/js/owl.carousel.js"></script>
-	<script src="assets/js/isotope.pkgd.js"></script>
-	<script src="assets/js/prettyPhoto.js"></script>
-	<script src="assets/js/swiper.min.js"></script>
-	<script src="assets/js/jquery-ui.js"></script>
-	<script src="assets/js/countTo.js"></script>
-	<script src="assets/js/appear.js"></script>
-	<script src="assets/js/main.js"></script>
   <script type="text/javascript">
-	atOptions = {
-		'key' : '8dcb716f02243cd445fccf95cc4ee3a9',
-		'format' : 'iframe',
-		'height' : 600,
-		'width' : 160,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/8dcb716f02243cd445fccf95cc4ee3a9/invoke.js"></script>
-<script type="text/javascript">
-	atOptions = {
-		'key' : '25b552e6849fdd1a9b9f57bda55bc25b',
-		'format' : 'iframe',
-		'height' : 250,
-		'width' : 300,
-		'params' : {}
-	};
-</script>
-<script type="text/javascript" src="//www.topcreativeformat.com/25b552e6849fdd1a9b9f57bda55bc25b/invoke.js"></script>
-
+    atOptions = {
+      'key' : '2fc087847a389f44d27070155ab00dc8',
+      'format' : 'iframe',
+      'height' : 90,
+      'width' : 728,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.topcreativeformat.com/2fc087847a389f44d27070155ab00dc8/invoke.js" defer></script>
+  <script type='text/javascript' src='//pl24223346.cpmrevenuegate.com/e2/d8/d2/e2d8d22bb64392d227d2bfa586c291bc.js' defer></script>
+  
+  <app-root></app-root>
+  
+  <script src="assets/js/vendor/jquery-library.js" defer></script>
+  <script src="assets/js/vendor/bootstrap.min.js" defer></script>
+  <script src="assets/js/customScrollbar.min.js" defer></script>
+  <script src="assets/js/owl.carousel.js" defer></script>
+  <script src="assets/js/isotope.pkgd.js" defer></script>
+  <script src="assets/js/prettyPhoto.js" defer></script>
+  <script src="assets/js/swiper.min.js" defer></script>
+  <script src="assets/js/jquery-ui.js" defer></script>
+  <script src="assets/js/countTo.js" defer></script>
+  <script src="assets/js/appear.js" defer></script>
+  <script src="assets/js/main.js" defer></script>
+  
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '8dcb716f02243cd445fccf95cc4ee3a9',
+      'format' : 'iframe',
+      'height' : 600,
+      'width' : 160,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.topcreativeformat.com/8dcb716f02243cd445fccf95cc4ee3a9/invoke.js" defer></script>
+  <script type="text/javascript">
+    atOptions = {
+      'key' : '25b552e6849fdd1a9b9f57bda55bc25b',
+      'format' : 'iframe',
+      'height' : 250,
+      'width' : 300,
+      'params' : {}
+    };
+  </script>
+  <script type="text/javascript" src="//www.topcreativeformat.com/25b552e6849fdd1a9b9f57bda55bc25b/invoke.js" defer></script>
 </body>
 </html>
