--- a/src/index.html
+++ b/src/index.html
@@ -11,6 +11,8 @@
   <link rel="icon" type="image/png" href="assets/images/logo.png">
   <meta name="robots" content="index, follow">
   <link rel="apple-touch-icon" href="apple-touch-icon.png">
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
   <link rel="stylesheet" href="assets/css/bootstrap.min.css">
   <link rel="stylesheet" href="assets/css/normalize.css">
   <link rel="stylesheet" href="assets/css/font-awesome.min.css">
