--- a/src/index.html
+++ b/src/index.html
@@ -5,7 +5,7 @@
   <title>Koora Live LB - Watch Live Streaming of Football, Basketball, Baseball, Tennis & More</title>
 
   <base href="/">
-  <meta name="description" content="Kooora Lives offers live streaming for the most popular sports worldwide, including football, basketball, baseball, tennis, and much more. Watch your favorite sports events live!">
+  <meta name="description" content="كورة لايف koora live مشاهدة مباريات اليوم بث مباشر عبر موقع كورة لايف اون لاين بدون تقطيع kora live اهم مباريات اليوم لايف كورة kooralive.">
   <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
   
   <link rel="icon" type="image/png" href="assets/images/logo.png">
