--- a/src/index.html
+++ b/src/index.html
@@ -35,7 +35,7 @@
     "@type": "WebSite",
     "name": "Kooora Lives",
     "url": "https://www.koraleb.com",
-    "description": "Kooora Lives offers live streaming of popular sports including football, basketball, baseball, tennis, and more."
+    "description": "كورة لايف koora live مشاهدة مباريات اليوم بث مباشر عبر موقع كورة لايف اون لاين بدون تقطيع kora live اهم مباريات اليوم لايف كورة kooralive."
   }
   </script>
   <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" defer></script>
