--- a/src/index.html
+++ b/src/index.html
@@ -33,7 +33,7 @@
   {
     "@context": "https://schema.org",
     "@type": "WebSite",
-    "name": "Kooora Lives",
+    "name": "koora live",
     "url": "https://www.koraleb.com",
     "description": "كورة لايف koora live مشاهدة مباريات اليوم بث مباشر عبر موقع كورة لايف اون لاين بدون تقطيع kora live اهم مباريات اليوم لايف كورة kooralive."
   }
