--- a/src/index.html
+++ b/src/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Koora Live LB - Watch Live Streaming of Football, Basketball, Baseball, Tennis & More</title>
+  <title>كورة لايف | koora live lb |مباريات اليوم بث مباشر  kora live</title>
 
   <base href="/">
   <meta name="description" content="كورة لايف koora live مشاهدة مباريات اليوم بث مباشر عبر موقع كورة لايف اون لاين بدون تقطيع kora live اهم مباريات اليوم لايف كورة kooralive.">
