--- a/src/index.html
+++ b/src/index.html
@@ -58,7 +58,17 @@
   <script src="assets/js/appear.js" defer></script>
   <script src="assets/js/main.js" defer></script>
   
- 
+ <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block; text-align:center;"
+     data-ad-layout="in-article"
+     data-ad-format="fluid"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="2133746963"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 
 
 </body>
