--- a/src/index.html
+++ b/src/index.html
@@ -43,7 +43,18 @@
 <body>
   
 
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<!-- kind -->
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="5078097782"
+     data-ad-format="auto"
+     data-full-width-responsive="true"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <app-root></app-root>
   
   <script src="assets/js/vendor/jquery-library.js" defer></script>
