--- a/src/index.html
+++ b/src/index.html
@@ -42,7 +42,17 @@
 </head>
 <body>
   
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-79+ew+d-4u+77"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="5918176781"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
      crossorigin="anonymous"></script>
 <!-- kind -->
