--- a/src/index.html
+++ b/src/index.html
@@ -101,6 +101,15 @@
 <script>
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
-
+<script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="autorelaxed"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="6008036077"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
 </body>
 </html>
