--- a/src/index.html
+++ b/src/index.html
@@ -66,7 +66,17 @@
      (adsbygoogle = window.adsbygoogle || []).push({});
 </script>
   <app-root></app-root>
-  
+  <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-1987564699076912"
+     crossorigin="anonymous"></script>
+<ins class="adsbygoogle"
+     style="display:block"
+     data-ad-format="fluid"
+     data-ad-layout-key="-79+ew+d-4u+77"
+     data-ad-client="ca-pub-1987564699076912"
+     data-ad-slot="6264563668"></ins>
+<script>
+     (adsbygoogle = window.adsbygoogle || []).push({});
+</script>
   <script src="assets/js/vendor/jquery-library.js" defer></script>
   <script src="assets/js/vendor/bootstrap.min.js" defer></script>
   <script src="assets/js/customScrollbar.min.js" defer></script>
