--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="utf-8">
   <title>كورة لايف | koora live lb |مباريات اليوم بث مباشر  kora live</title>
-
+  <meta name="ezoic-site-verification" content="A2oZpYiD209ao26DEa9AzBakeX8mG9" />
   <base href="/">
   <meta name="description" content="كورة لايف koora live مشاهدة مباريات اليوم بث مباشر عبر موقع كورة لايف اون لاين بدون تقطيع kora live اهم مباريات اليوم لايف كورة kooralive.">
   <meta name="keywords" content="motion picture lighting, color correct lighting, high CRI lighting, film lighting, video lighting, indie lighting">
