--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
   }
   </script>
   <script src="assets/js/vendor/modernizr-2.8.3-respond-1.4.2.min.js" defer></script>
-   <meta name="ezoic-site-verification" content="A2oZpYiD209ao26DEa9AzBakeX8mG9" />
+   <meta name="ezoic-site-verification" content="A2oZpYiD209ao26DEa9AzBakeX8mG9" >
 </head>
 <body>
   
